Generate attached perperty registrations with ModuleInitializer, generate extension methods

--- a/src/BlazorBindings.Avalonia.HelloWorld/App.axaml
+++ b/src/BlazorBindings.Avalonia.HelloWorld/App.axaml
@@ -3,6 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     x:Class="BlazorBindings.AvaloniaBindings.HelloWorld.App"
     xmlns:local="using:BlazorBindings.AvaloniaBindings.HelloWorld"
+	xmlns:nav="using:BlazorBindings.AvaloniaBindings.Navigation"
     RequestedThemeVariant="Default">
 	<!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
@@ -16,6 +17,16 @@
 
 		<Style Selector="Button">
 			<Setter Property="FontWeight" Value="Black" />
+		</Style>
+
+		<Style Selector="local|BlazorBindingsApplicationMainPage nav|ItemsControlWithItemContainer">
+			<Setter Property="ItemContainerTheme">
+				<ControlTheme TargetType="ContentPresenter">
+					<Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+					<Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+					<Setter Property="Background" Value="#3f0f"></Setter>
+				</ControlTheme>
+			</Setter>
 		</Style>
 	</local:BlazorBindingsApplicationMainPage.Styles>
 </local:BlazorBindingsApplicationMainPage>
