Update NuGet packages, fix NUnit 4 breaking changes

--- a/src/BlazorBindings.UnitTests/Components/NonPageContent.razor
+++ b/src/BlazorBindings.UnitTests/Components/NonPageContent.razor
@@ -6,10 +6,10 @@
 public static void ValidateContent(Microsoft.Maui.IElement content)
 {
     var stackLayout = content as MC.VerticalStackLayout;
-    Assert.IsNotNull(stackLayout);
+    Assert.That(stackLayout, Is.Not.Null);
 
     var label = stackLayout.Children.FirstOrDefault() as MC.Label;
-    Assert.IsNotNull(label);
+    Assert.That(label, Is.Not.Null);
     Assert.That(label.Text, Is.EqualTo("Text"));
 }
 }
