--- a/src/BlazorBindings.UnitTests/Components/PageContent.razor
+++ b/src/BlazorBindings.UnitTests/Components/PageContent.razor
@@ -6,7 +6,7 @@
 public static void ValidateContent(MC.Element content)
 {
     var contentPage = content as MC.ContentPage;
-    Assert.IsNotNull(contentPage);
+    Assert.That(contentPage, Is.Not.Null);
     Assert.That(contentPage.Title, Is.EqualTo("Test"));
     NonPageContent.ValidateContent(contentPage.Content);
 }
