Fix markup text adding/replacing/removal

--- a/src/BlazorBindings.AvaloniaBindings.HelloWorld/MainPage.razor
+++ b/src/BlazorBindings.AvaloniaBindings.HelloWorld/MainPage.razor
@@ -63,6 +63,7 @@
                     </ContextMenu>
                 </ContextMenuSlot>
             </TextBox>
+            <Label> <n>dd</n> so<b>k</b>me <z>zzz</z> </Label>
             <TextBlock Text="Hello World"></TextBlock>
             @if (buttonVisible == true)
             {
