--- a/src/BlazorBindingsAvalonia.HelloWorld/SubPage.razor
+++ b/src/BlazorBindingsAvalonia.HelloWorld/SubPage.razor
@@ -8,7 +8,7 @@
 <ScrollViewer>
     <StackPanel HorizontalAlignment="AL.HorizontalAlignment.Center"
                 VerticalAlignment="AL.VerticalAlignment.Top">
-        <TextBlock Text="Sub" Foreground="AM.Brushes.White"></TextBlock>
+        <TextBlock Text="Sub" Foreground="@("White")"></TextBlock>
         <Button OnClick="Back">Back</Button>
     </StackPanel>
 </ScrollViewer>
