--- a/src/BlazorBindingsAvalonia.HelloWorld/MainPage.razor
+++ b/src/BlazorBindingsAvalonia.HelloWorld/MainPage.razor
@@ -174,7 +174,7 @@
 
     RenderFragment GetModalFragment() =>
     @<Panel Width="300" Height="200">
-        <Border Background="@("Green")" Padding="new A.Thickness(10,10,10,10)" CornerRadius="new A.CornerRadius(10)" ClipToBounds="true">
+        <Border Background="Colors.Green" Padding="(10,10,10,10)" CornerRadius="10" ClipToBounds="true">
             <StackPanel>
                 <TextBlock Text="This is a modal"></TextBlock>
                 @* <Button OnClick="@(() => navigation.PushModalAsync(GetModalFragment()))">Open another Modal</Button> *@
