--- a/src/BlazorBindingsAvalonia.HelloWorld/_imports.razor
+++ b/src/BlazorBindingsAvalonia.HelloWorld/_imports.razor
@@ -1,7 +1,7 @@
 ﻿@using BlazorBindingsAvalonia.Elements
 @using A = global::Avalonia;
 
-@using AL = global::Avalonia.Layout;
+@using global::Avalonia.Layout;
 @using AC = global::Avalonia.Controls;
 @using AM = global::Avalonia.Media
 
