--- a/src/BlazorBindingsAvalonia.HelloWorld/App.axaml
+++ b/src/BlazorBindingsAvalonia.HelloWorld/App.axaml
@@ -5,6 +5,7 @@
     xmlns:local="using:BlazorBindingsAvalonia.HelloWorld"
 	xmlns:nav="using:BlazorBindingsAvalonia.Navigation"
 	xmlns:helloWorld="clr-namespace:BlazorBindingsAvalonia.HelloWorld"
+    xmlns:semi="https://irihi.tech/semi"
 	RequestedThemeVariant="Default">
 	<!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
@@ -13,12 +14,6 @@
 	</helloWorld:BlazorBindingsApplicationMainPage.DataTemplates>
 
 	<local:BlazorBindingsApplicationMainPage.Styles>
-		<FluentTheme />
-		<StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
-
-		<Style Selector="Button">
-			<Setter Property="FontWeight" Value="Black" />
-		</Style>
-
+		<semi:SemiTheme Locale="zh-CN" />
 	</local:BlazorBindingsApplicationMainPage.Styles>
 </local:BlazorBindingsApplicationMainPage>
