优化class => Classes Theme支持字符串

--- a/src/BlazorBindingsAvalonia.HelloWorld/Pages/MainPage.razor
+++ b/src/BlazorBindingsAvalonia.HelloWorld/Pages/MainPage.razor
@@ -1,18 +1,16 @@
 ﻿@page "/"
 
 @using Avalonia.Controls;
-@using Avalonia.Media;
-@using Avalonia.Styling
 
-@inject INavigation navigation
+@inject INavigation Navigation
 
 <Window Title="测试" Width="400" Height="800">
 
     <Border Background="@("#E6E6E6")">
-        <Panel >
-            <Border Margin="(30, 30, 30, 30)" Background="@("#FFFFFF")" CornerRadius="10">
+        <Panel>
+        <Border Theme="@("CardBorder")">
                 <StackPanel  HorizontalAlignment="HorizontalAlignment.Center" VerticalAlignment="VerticalAlignment.Center">
-                    <Button class="Primary" Theme="@((ControlTheme)A.Application.Current.FindResource("SolidButton"))" OnClick="OnButtonClick">Go to sub page</Button>
+                    <Button Classes="Primary" Theme="@("SolidButton")" OnClick="OnButtonClick">Go to sub page</Button>
                 </StackPanel>
             </Border>
         </Panel>
@@ -24,6 +22,6 @@
 
     async Task OnButtonClick()
     {
-        await navigation.NavigateToAsync("/sub1", null);
+        await Navigation.NavigateToAsync("/sub1", null);
     }
 }
