--- a/src/BlazorBindingsAvalonia.HelloWorld/Pages/Sub2.razor
+++ b/src/BlazorBindingsAvalonia.HelloWorld/Pages/Sub2.razor
@@ -7,11 +7,14 @@
 
 <Border Background="@("#E6E6E6")">
     <Panel>
-        <Border Margin="(30, 30, 30, 30)" Background="@("#FFFFFF")" CornerRadius="10">
-            <StackPanel Orientation="Orientation.Horizontal" HorizontalAlignment="HorizontalAlignment.Center" VerticalAlignment="VerticalAlignment.Center">
-                <Button class="Danger" OnClick="Back">Back</Button>
-                <Button class="Success" Theme="@((ControlTheme)A.Application.Current.FindResource("SolidButton"))" OnClick="Next">Next</Button>
-            </StackPanel>
+        <Border Theme="@("CardBorder")">
+            <DockPanel>
+                <TextBlock FontWeight="FontWeight.Black" FontSize="24" DockPanel.Dock="@Dock.Top">Sub Page 2</TextBlock>
+                <StackPanel Orientation="Orientation.Horizontal" HorizontalAlignment="HorizontalAlignment.Center" VerticalAlignment="VerticalAlignment.Center">
+                    <Button Classes="Danger" OnClick="Back">Back</Button>
+                    <Button Classes="Success" Theme="@((ControlTheme)A.Application.Current.FindResource("SolidButton"))" OnClick="Next">Next</Button>
+                </StackPanel>
+            </DockPanel>
         </Border>
     </Panel>
 
