--- a/src/BlazorBindingsAvalonia.HelloWorld/Pages/Sub3.razor
+++ b/src/BlazorBindingsAvalonia.HelloWorld/Pages/Sub3.razor
@@ -7,10 +7,13 @@
 
 <Border Background="@("#E6E6E6")">
     <Panel>
-        <Border Margin="(30, 30, 30, 30)" Background="@("#FFFFFF")" CornerRadius="10">
-            <StackPanel Orientation="Orientation.Horizontal" HorizontalAlignment="HorizontalAlignment.Center" VerticalAlignment="VerticalAlignment.Center">
-                <Button class="Danger" OnClick="Back">Back</Button>
-            </StackPanel>
+        <Border Theme="@("CardBorder")">
+            <DockPanel>
+                <TextBlock FontWeight="FontWeight.Black" FontSize="24" DockPanel.Dock="@Dock.Top">Sub Page 3</TextBlock>
+                <StackPanel Orientation="Orientation.Horizontal" HorizontalAlignment="HorizontalAlignment.Center" VerticalAlignment="VerticalAlignment.Center">
+                    <Button Classes="Danger" OnClick="Back">Back</Button>
+                </StackPanel>
+            </DockPanel>
         </Border>
     </Panel>
 
