--- a/src/Blazonia.HelloWorld/Pages/MainPage.razor
+++ b/src/Blazonia.HelloWorld/Pages/MainPage.razor
@@ -4,13 +4,14 @@
 
 @inject INavigation Navigation
 
-<Window Title="测试" Width="400" Height="800">
+<Window Title="测试" Width="400" Height="800" Icon="@("avares://Blazonia.HelloWorld/Assets/avalonia-logo.ico")">
 
     <Border Background="@("#E6E6E6")">
         <Panel>
         <Border Theme="@("CardBorder")">
                 <StackPanel  HorizontalAlignment="HorizontalAlignment.Center" VerticalAlignment="VerticalAlignment.Center">
                     <Button Classes="Primary" Theme="@("SolidButton")" OnClick="OnButtonClick">Go to sub page</Button>
+                    <Image Source="@("avares://Blazonia.HelloWorld/Assets/avalonia-logo.ico")"></Image>
                 </StackPanel>
             </Border>
         </Panel>
