--- a/src/Blazonia.UnitTests/Elements/ImageTests.razor
+++ b/src/Blazonia.UnitTests/Elements/ImageTests.razor
@@ -1,3 +1,4 @@
+@using System.Reflection
 @using Avalonia.Headless.XUnit
 @using Blazonia
 @using Blazonia.Components
@@ -8,16 +9,16 @@
     public async Task Image_With_Source_Is_Set()
     {
         var image = await Render<AC.Image>(
-            @<Image SSource="@("test.png")" />);
+            @<Image Source="@($"avares://{Assembly.GetCallingAssembly().FullName}/Empty.png")" />);
 
-        Assert.Equal("test.png", image.Source?.ToString());
+        Assert.Equal("Avalonia.Media.Imaging.Bitmap", image.Source?.ToString());
     }
 
     [AvaloniaFact]
     public async Task Image_With_Width_And_Height_Is_Set()
     {
         var image = await Render<AC.Image>(
-            @<Image Source="@("test.png")" Width="100" Height="50" />);
+            @<Image Source="@($"avares://{Assembly.GetCallingAssembly().FullName}/Empty.png")" Width="100" Height="50" />);
 
         Assert.Equal(100, image.Width);
         Assert.Equal(50, image.Height);
